# nonce-cracker

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  check.md  check_zeroize  cleanup.sh  deny.toml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: search.rs
docs/: DEPLOYMENT.md  affine-relation-derivation.md  faq.md
docs/superpowers/plans/: 2026-05-13-rho-openmap.md
docs/superpowers/specs/: 2026-05-13-rho-hashmap-design.md
examples/: bench_bsgs.rs  demo.rs  generate.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: openmap.rs  parse_int.rs  parse_pubkey.rs  parse_scalar.rs
patches/k256/: Cargo.toml  Cargo.toml.orig  README.md
patches/k256/src/arithmetic/: projective.rs
src/: checkpoint.rs  cli.rs  config.rs  context.rs  crypto.rs  domain.rs  error.rs  fixtures.rs  lib.rs  logging.rs  main.rs  metrics.rs  recover.rs  search.rs
src/search/: bsgs.rs  kangaroo.rs  mod.rs  openmap.rs  parallel.rs  params.rs  rho.rs  tests.rs
tests/: integration.rs
