[package]
name = "nonce-cracker"
version = "0.2.0"
edition = "2021"
authors = ["nonce-cracker contributors"]
license = "MIT OR Apache-2.0"
description = "High-speed parallel ECDSA private key recovery for secp256k1 using affine relation attack"
repository = "https://github.com/sachn-cs/nonce-cracker"
homepage = "https://github.com/sachn-cs/nonce-cracker"
documentation = "https://docs.rs/nonce-cracker"
keywords = ["ecdsa", "secp256k1", "cryptography", "bitcoin"]
categories = ["cryptography", "command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "pkcs8", "std"] }
rand = "0.8"
rayon = "1.8"
rustc-hash = "2"
signal-hook = "0.3"
tracing = { version = "0.1", features = ["attributes"] }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "search"
harness = false

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
